Feature (#31)
* Fix: CustomUserDetailsService refactoring

* Fix: configuration refactoring

* Fix: GatewayApplication main() refactoring

* Fix: Notification-service refactoring

* Fix: User-service adding user refactoring

* Fix: User-service tests refactoring

* Fix: User-service service refactoring

* Fix: User-service full refactoring